--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
 	<p id='lives'></p>
 	<h2 id='youLose'></h2>
-	<h2 id='youWin'></h2>
-	<button id='hintbtn' onclick="">Hint</button>
+	<div id='youWin'></div>
+	<img id ='img' src='thumbs.jpg'></img>
+	<!-- <button id='hintbtn' onclick="">Hint</button> -->
 	<h3 id='hint'></h3>
+<!-- 	<p id='demo'></p> -->
 </div>
 
 
