--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<p id='lives'></p>
 	<h2 id='youLose'></h2>
 	<div id='youWin'></div>
+	<h2 id='textWin'></h2>
 	<img id ='img' src='thumbs.jpg'></img>
 	<!-- <button id='hintbtn' onclick="">Hint</button> -->
 	<h3 id='hint'></h3>
