--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	<p id='answer'></p>
 		</div>
 
-	<p id='lives'></p>
+	<p id='livesText'></p>
 	<h2 id='youLose'></h2>
+	<img id="blackThumb" src="wrong.jpg">
 	<div id='youWin'></div>
 	<h2 id='textWin'></h2>
 	<img id ='img' src='thumbs.jpg'></img>
