--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>HangMan Project</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body onload ="startUp()" id='body'>
 
@@ -11,6 +12,10 @@
 
 <div class='row'>
 		<div id='column'>
+
+	<button id='random' onclick="">Next word</button>
+	<p id='text'></p>
+
 	<input type="text" maxlength='1' id='letter' placeholder="Guess a letter">
 
 	<input type="submit" id='textBtn' align="middle" value='search letter' onClick='showLetters()'/>
@@ -20,13 +25,11 @@
 	<p id='livesText'></p>
 	<h2 id='youLose'></h2>
 	<!-- <img id="blackThumb" src="wrong.jpg" height="15%" width="15%"> -->
-	<img id="redWrong" src="redwrong.jpg">
+	<img id="redWrong" src="images/redwrong.jpg">
 	<div id='youWin'></div>
 	<h2 id='textWin'></h2>
-	<img id ='img' src='thumbs.jpg'></img>
+	<img id ='img' src='images/thumbs.jpg'></img>
 	<!-- <button id='hintbtn' onclick="">Hint</button> -->
-	<h3 id='hint'></h3>
-<!-- 	<p id='demo'></p> -->
 </div>
 
 
